# uni

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.org
Applications/: CMakeLists.txt
Applications/Approximation/: CMakeLists.txt  main.cc
Applications/Control/: areIdentical.m  findcontrol.m  finddiffcontrol.m  fundmat.m  getCoeff.m  stabilize.m
Applications/Integration/: CMakeLists.txt  main.cc
Applications/Interpolation/: CMakeLists.txt  main.cc
Applications/JSP/: CMakeLists.txt  config.txt  main.cc
Latex/: CMakeLists.txt
Latex/Documents/: CMakeLists.txt
Latex/Presentations/: CMakeLists.txt
Libraries/: CMakeLists.txt
Libraries/LibApproximation/: Approximator.hh  CMakeLists.txt  LeastSquares.hh  LeastSquaresApproximator.cc  LeastSquaresApproximator.hh
Libraries/LibGUI/: CMakeLists.txt  Plot.cc  Plot.hh  Window.cc  Window.hh  matplotlibcpp.h
Libraries/LibInterpolation/: CMakeLists.txt  Interpolator.hh  LagrangeInterpolator.cc  LagrangeInterpolator.hh  LinearGenerator.hh  NewtonInterpolator.cc  NewtonInterpolator.hh  OptimalGenerator.hh  PolynomialInterpolator.hh  SequenceGenerator.hh
Libraries/LibMath/: Algebra.hh  CMakeLists.txt  Constants.hh  Filters.hh  Function.hh  Graph.hh  Integration.hh  Interval.hh  Math.hh  Matrix.cc  Matrix.hh  Point.hh  Polynomial.cc  Polynomial.hh  Spline.cc  Spline.hh
Libraries/LibOptimization/: AntColony.hh  (+1 more)
Tests/: CMakeLists.txt
Tests/LibApproximation/: LeastSquaresApproximator.specs.cc
Tests/LibInterpolation/Spline/: Cubic.specs.cc  Linear.specs.cc  Quadratic.specs.cc
Tests/LibMath/: Algebra.specs.cc  Polynomial.specs.cc
Tests/LibMath/Functions/: Cosine.specs.cc  Exponent.specs.cc  Sine.specs.cc  SquareRoot.specs.cc  Trigonometry.specs.cc
Tests/LibOptimization/: Schedule.specs.cc
Tests/LibOptimization/Scheduling/: OpenShop.specs.cc
Tests/LibSLE/: GaussSolver.specs.cc
Tests/LibStatistic/: Average.specs.cc
Tests/LibStatistics/: Average.specs.cc
VS/: Concepts.hh  Heap.hh  Pair.hh  Timeline.hh  Traits.hh  Types.hh  Vector.hh
Vendors/: CMakeLists.txt
Website/: deploy  index.html  package-lock.json  package.json
(+92 files in other folders)
